// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBreadcrumbsMarkup should generate breadcrumbs HTML for a valid path list in English 1`] = `
"
  <nav id="breadcrumbs" aria-label="Breadcrumbs" class="kth-breadcrumbs">
    <ol class="kth-breadcrumbs__list">
      <li><a href="/">Kth</a></li><li><a href="/test1">Test 1</a></li><li><a href="/test2">Test 2</a></li>
    </ol>
  </nav>
"
`;

exports[`getBreadcrumbsMarkup should generate breadcrumbs HTML for a valid path list in Swedish 1`] = `
"
  <nav id="breadcrumbs" aria-label="Brödsmulor" class="kth-breadcrumbs">
    <ol class="kth-breadcrumbs__list">
      <li><a href="/">Kth</a></li><li><a href="/test1">Test 1</a></li><li><a href="/test2">Test 2</a></li>
    </ol>
  </nav>
"
`;
